--- a/index.html
+++ b/index.html
@@ -90,13 +90,37 @@ window.open("zadanie16_seli.html","okienko_z16","toolbar=no,directories=no,menub
                { 
 window.open("zadanie16_seli_kod.html","okienko_z16k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
                }
+               function WinOpen_zadanie17()  
+               { 
+window.open("zadanie17_seli.html","okienko_z17","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie17k()  
+               { 
+window.open("zadanie17_seli_kod.html","okienko_z17k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
                function WinOpen_zadanie18()  
                { 
 window.open("zadanie18_seli.html","okienko_z18","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
                }
+               function WinOpen_zadanie18k()  
+               { 
+window.open("zadanie18_seli_kod.html","okienko_z18k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
                function WinOpen_zadanie19()  
                { 
 window.open("zadanie19_seli.html","okienko_z19","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie19k()  
+               { 
+window.open("zadanie19_seli_kod.html","okienko_z19k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie20()  
+               { 
+window.open("zadanie20_seli.html","okienko_z20","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie20k()  
+               { 
+window.open("zadanie20_seli_kod.html","okienko_z20k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
                }
                function WinOpen_zadanie21()  
                { 
@@ -105,6 +129,26 @@ window.open("zadanie21_seli.html","okienko_z21","toolbar=no,directories=no,menub
                function WinOpen_zadanie21k()  
                { 
 window.open("zadanie21_seli_kod.html","okienko_z21k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie22()  
+               { 
+window.open("zadanie22_seli.html","okienko_z22","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie22k()  
+               { 
+window.open("zadanie22_seli_kod.html","okienko_z22k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie23()  
+               { 
+window.open("zadanie23_seli.html","okienko_z23","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie23k()  
+               { 
+window.open("zadanie23_seli_kod.html","okienko_z23k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie24()  
+               { 
+window.open("zadanie24_seli.html","okienko_z24","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
                }
 function okno_zamknij()  
                        {
@@ -147,17 +191,21 @@ function okno_zamknij()
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie16" name="zadanie16" value="zadanie16-seliak" onclick="WinOpen_zadanie16(' ')"><input type="button_zadanie16k" name="zadanie16k" value="zadanie16k-seliak" onclick="WinOpen_zadanie16k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+        <input type="button_zadanie17" name="zadanie17" value="zadanie17-seliak" onclick="WinOpen_zadanie17(' ')"><input type="button_zadanie17k" name="zadanie17k" value="zadanie17k-seliak" onclick="WinOpen_zadanie17k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie18" name="zadanie18" value="zadanie18-seliak" onclick="WinOpen_zadanie18(' ')"><input type="button_zadanie18k" name="zadanie18k" value="zadanie18k-seliak" onclick="WinOpen_zadanie18k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
        <input type="button_zadanie19" name="zadanie19" value="zadanie19-seliak" onclick="WinOpen_zadanie19(' ')"><input type="button_zadanie19k" name="zadanie19k" value="zadanie19k-seliak" onclick="WinOpen_zadanie19k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+        <input type="button_zadanie20" name="zadanie20" value="zadanie20-seliak" onclick="WinOpen_zadanie20(' ')"><input type="button_zadanie20k" name="zadanie20k" value="zadanie20k-seliak" onclick="WinOpen_zadanie20k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
          <input type="button_zadanie21" name="zadanie21" value="zadanie21-seliak" onclick="WinOpen_zadanie21(' ')"><input type="button_zadanie21k" name="zadanie21k" value="zadanie21k-seliak" onclick="WinOpen_zadanie21k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
-   <!--     <input type="button_zadanie14" name="zadanie14" value="zadanie14-seliak" onclick="WinOpen_zadanie14(' ')"><input type="button_zadanie14k" name="zadanie14k" value="zadanie14k-seliak" onclick="WinOpen_zadanie14k(' ')"><br><br> 
+    <input type="button_zadanie22" name="zadanie22" value="zadanie22-seliak" onclick="WinOpen_zadanie22(' ')"><input type="button_zadanie22k" name="zadanie22k" value="zadanie22k-seliak" onclick="WinOpen_zadanie22k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
-        <input type="button_zadanie13" name="zadanie13" value="zadanie13-seliak" onclick="WinOpen_zadanie13(' ')"><input type="button_zadanie13k" name="zadanie13k" value="zadanie13k-seliak" onclick="WinOpen_zadanie13k(' ')"><br><br> 
+        <input type="button_zadanie23" name="zadanie23" value="zadanie23-seliak" onclick="WinOpen_zadanie23(' ')"><input type="button_zadanie23k" name="zadanie23k" value="zadanie23k-seliak" onclick="WinOpen_zadanie23k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
-        <input type="button_zadanie14" name="zadanie14" value="zadanie14-seliak" onclick="WinOpen_zadanie14(' ')"><input type="button_zadanie14k" name="zadanie14k" value="zadanie14k-seliak" onclick="WinOpen_zadanie14k(' ')"><br><br> 
+        <input type="button_zadanie24" name="zadanie24" value="zadanie24-seliak" onclick="WinOpen_zadanie24(' ')"><input type="button_zadanie24k" name="zadanie24k" value="zadanie24k-seliak" onclick="WinOpen_zadanie24k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
