--- a/zadanie28_seli.html
+++ b/zadanie28_seli.html
@@ -5,11 +5,11 @@
 <title>Zadanie 28 – Programowanie</title>
 </head>
 <body>
-<h1>ZADANIE 28 – Programowanie</h1>
+<h1>ZADANIE 28 - Programowanie</h1>
 <h2>PYTANIA</h2>
 <h1>1. Rodzaje „filozofii” programowania.</h1>
 <h1>2. Opisz paradygmat programowania strukturalnego. Założenia programowania strukturalnego.</h1>
-<h1>3. Programowanie obiektowe – definicja (skrót angielski, obiekty, stan, zachowanie, konkluzja).</h1>
+<h1>3. Programowanie obiektowe - definicja (skrót angielski, obiekty, stan, zachowanie, konkluzja).</h1>
 <h1>4. Dlaczego stosujemy programowanie obiektowe?</h1>
 <h1>5. Omów pojęcia: klasa, obiekt, właściwość, metoda, konstruktor, dziedziczenie, hermetyzacja, polimorfizm.</h1>
 <hr>
@@ -36,7 +36,7 @@ Zwiększa czytelność kodu i eliminuje chaos zwany „spaghetti code”, który
 </h2>
 <h1>3. Programowanie obiektowe</h1>
 <h2>
-Programowanie obiektowe (ang. Object-Oriented Programming – OOP) polega na tworzeniu programów
+Programowanie obiektowe (ang. Object-Oriented Programming - OOP) polega na tworzeniu programów
 za pomocą obiektów. Obiekty mają swój stan (dane) oraz zachowanie (metody).
 Program jest zbiorem współpracujących ze sobą obiektów.
 </h2>
@@ -48,7 +48,7 @@ Umożliwia też wielokrotne wykorzystanie gotowych klas, co oszczędza czas i pi
 </h2>
 <h1>5. Pojęcia</h1>
 <h2>Klasa</h2>
-<h3>Szablon opisujący jak będą wyglądały obiekty – zawiera pola i metody.</h3>
+<h3>Szablon opisujący jak będą wyglądały obiekty - zawiera pola i metody.</h3>
 <h2>Obiekt</h2>
 <h3>Konkretna instancja klasy, czyli byt utworzony na podstawie klasy.</h3>
 <h2>Właściwość</h2>
