Add multiple functions to open new windows

--- a/index.html
+++ b/index.html
@@ -150,6 +150,38 @@ window.open("zadanie23_seli_kod.html","okienko_z23k","toolbar=no,directories=no,
                { 
 window.open("zadanie24_seli.html","okienko_z24","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
                }
+               function WinOpen_zadanie28()  
+               { 
+window.open("zadanie28_seli.html","okienko_z28","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie29()
+               { 
+window.open("zadanie29_seli.html","okienko_z29","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie30()
+               { 
+window.open("zadanie30_seli.html","okienko_z30","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie30k()
+               { 
+window.open("zadanie30_seli_kod.html","okienko_z30k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie31()
+               { 
+window.open("zadanie31_seli.html","okienko_z31","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie31k()
+               { 
+window.open("zadanie31_seli_kod.html","okienko_z31k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie32()
+               { 
+window.open("zadanie32_seli.html","okienko_z32","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie32k()
+               { 
+window.open("zadanie32_seli_kod.html","okienko_z32k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
 function okno_zamknij()  
                        {
                              window.close() 
@@ -205,7 +237,15 @@ function okno_zamknij()
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie23" name="zadanie23" value="zadanie23-seliak" onclick="WinOpen_zadanie23(' ')"><input type="button_zadanie23k" name="zadanie23k" value="zadanie23k-seliak" onclick="WinOpen_zadanie23k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
-        <input type="button_zadanie24" name="zadanie24" value="zadanie24-seliak" onclick="WinOpen_zadanie24(' ')"><input type="button_zadanie24k" name="zadanie24k" value="zadanie24k-seliak" onclick="WinOpen_zadanie24k(' ')"><br><br> 
+        <input type="button_zadanie28" name="zadanie28" value="zadanie28-seliak" onclick="WinOpen_zadanie28(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
+        <input type="button_zadanie29" name="zadanie29" value="zadanie29-seliak" onclick="WinOpen_zadanie29(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
+        <input type="button_zadanie30" name="zadanie30" value="zadanie30-seliak" onclick="WinOpen_zadanie30(' ')"><input type="button_zadanie30k" name="zadanie30k" value="zadanie30k-seliak" onclick="WinOpen_zadanie30k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
+        <input type="button_zadanie31" name="zadanie31" value="zadanie31-seliak" onclick="WinOpen_zadanie31(' ')"><input type="button_zadanie31k" name="zadanie31k" value="zadanie31k-seliak" onclick="WinOpen_zadanie31k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
+        <input type="button_zadanie32" name="zadanie32" value="zadanie32-seliak" onclick="WinOpen_zadanie32(' ')"><input type="button_zadanie32k" name="zadanie32k" value="zadanie32k-seliak" onclick="WinOpen_zadanie32k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
