--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@ window.open("zadanie32_seli.html","okienko_z32","toolbar=no,directories=no,menub
                { 
 window.open("zadanie32_seli_kod.html","okienko_z32k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
                }
+               function WinOpen_zadanie35()
+               { 
+window.open("zadanie35_seli.html","okienko_z35","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
 function okno_zamknij()  
                        {
                              window.close() 
@@ -246,6 +250,8 @@ function okno_zamknij()
         <input type="button_zadanie31" name="zadanie31" value="zadanie31-seliak" onclick="WinOpen_zadanie31(' ')"><input type="button_zadanie31k" name="zadanie31k" value="zadanie31k-seliak" onclick="WinOpen_zadanie31k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
         <input type="button_zadanie32" name="zadanie32" value="zadanie32-seliak" onclick="WinOpen_zadanie32(' ')"><input type="button_zadanie32k" name="zadanie32k" value="zadanie32k-seliak" onclick="WinOpen_zadanie32k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
+        <input type="button_zadanie35" name="zadanie35" value="zadanie35-seliak" onclick="WinOpen_zadanie35(' ')"><input type="button_zadanie35k" name="zadanie35k" value="zadanie35k-seliak" onclick="WinOpen_zadanie35k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
