Fix HR tags in index.html for consistency

--- a/index.html
+++ b/index.html
@@ -242,17 +242,17 @@ function okno_zamknij()
         <input type="button_zadanie23" name="zadanie23" value="zadanie23-seliak" onclick="WinOpen_zadanie23(' ')"><input type="button_zadanie23k" name="zadanie23k" value="zadanie23k-seliak" onclick="WinOpen_zadanie23k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie28" name="zadanie28" value="zadanie28-seliak" onclick="WinOpen_zadanie28(' ')"><br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie29" name="zadanie29" value="zadanie29-seliak" onclick="WinOpen_zadanie29(' ')"><br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie30" name="zadanie30" value="zadanie30-seliak" onclick="WinOpen_zadanie30(' ')"><input type="button_zadanie30k" name="zadanie30k" value="zadanie30k-seliak" onclick="WinOpen_zadanie30k(' ')"><br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie31" name="zadanie31" value="zadanie31-seliak" onclick="WinOpen_zadanie31(' ')"><input type="button_zadanie31k" name="zadanie31k" value="zadanie31k-seliak" onclick="WinOpen_zadanie31k(' ')"><br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie32" name="zadanie32" value="zadanie32-seliak" onclick="WinOpen_zadanie32(' ')"><input type="button_zadanie32k" name="zadanie32k" value="zadanie32k-seliak" onclick="WinOpen_zadanie32k(' ')"><br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie35" name="zadanie35" value="zadanie35-seliak" onclick="WinOpen_zadanie35(' ')"><input type="button_zadanie35k" name="zadanie35k" value="zadanie35k-seliak" onclick="WinOpen_zadanie35k(' ')"><br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
