Add functions to open new windows for zadanie36

--- a/index.html
+++ b/index.html
@@ -186,6 +186,18 @@ window.open("zadanie32_seli_kod.html","okienko_z32k","toolbar=no,directories=no,
                { 
 window.open("zadanie35_seli.html","okienko_z35","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
                }
+               function WinOpen_zadanie35k()
+               { 
+window.open("zadanie35_seli_kod.html","okienko_z35k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie36()
+               { 
+window.open("zadanie36_seli.html","okienko_z36","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie36k()
+               { 
+window.open("zadanie36_seli_kod.html","okienko_z36k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
 function okno_zamknij()  
                        {
                              window.close() 
@@ -252,6 +264,8 @@ function okno_zamknij()
         <input type="button_zadanie32" name="zadanie32" value="zadanie32-seliak" onclick="WinOpen_zadanie32(' ')"><input type="button_zadanie32k" name="zadanie32k" value="zadanie32k-seliak" onclick="WinOpen_zadanie32k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie35" name="zadanie35" value="zadanie35-seliak" onclick="WinOpen_zadanie35(' ')"><input type="button_zadanie35k" name="zadanie35k" value="zadanie35k-seliak" onclick="WinOpen_zadanie35k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+        <input type="button_zadanie36" name="zadanie36" value="zadanie36-seliak" onclick="WinOpen_zadanie36(' ')"><input type="button_zadanie36k" name="zadanie36k" value="zadanie36k-seliak" onclick="WinOpen_zadanie36k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
